--- a/page_7.html
+++ b/page_7.html
@@ -504,8 +504,8 @@
                 <input type="month" name="" id="" value="2025-02" />
                 <button class="check_button">조회</button>
                 <button class="check_button success_button">엑셀</button>
-                <button class="check_button warning_button">조회</button>
-                <button class="check_button warning_button">조회</button>
+                <button class="check_button warning_button">현업</button>
+                <button class="check_button warning_button">출력</button>
               </div>
             </div>
           </div>
