--- a/page_6.html
+++ b/page_6.html
@@ -571,18 +571,9 @@
               <th>월</th>
             </tr>
             <tr>
-              <th>
-                경무담 <br />
-                당
-              </th>
-              <td class="blue">
-                주 <br />
-                간
-              </td>
-              <td class="blue">
-                야 <br />
-                간
-              </td>
+              <th> 경무담 <br /> 당 </th>
+              <td>-</td>
+              <td>-</td>
               <td>-</td>
               <td>-</td>
               <td>-</td>
@@ -614,10 +605,7 @@
               <td>-</td>
             </tr>
             <tr>
-              <th>
-                전체등 <br />
-                록
-              </th>
+              <th> 전체등 <br /> 록 </th>
               <td>-</td>
               <td>-</td>
               <td>-</td>
