--- a/page_7.html
+++ b/page_7.html
@@ -298,21 +298,31 @@
       /* /Main Content Header */
 
       /* Table section styles */
+      .table-name{
+        text-align: left;
+        line-height: 0;
+        margin-top: 45px;
+      }
+      .blue{
+        color: #3376b8;
+      }
+      .red{
+        color: #ff0000;
+      }
+      .green{
+        color: #008f0a;
+      }
       table {
         width: 100%;
         border-collapse: collapse;
-        margin: 30px auto;
+        margin: 0px auto;
         font-size: 13px;
         font-weight: 600;
       }
 
       thead {
-        background-color: #3376b8;
-        color: white;
-      }
-
-      tbody tr:nth-child(odd) {
-        background-color: #eaeaea;
+        background-color: #d6ecff;
+        color: #333;
       }
 
       th,
@@ -322,83 +332,10 @@
         text-align: center;
       }
 
-      table select {
-        border-radius: 3px;
-        padding: 4px 6px;
+      tbody tr:nth-child(even) {
+        background-color: #f3f3f37a;
       }
-      table .date {
-        background-color: white;
-        border: 0.5px solid black;
-        border-radius: 3px;
-        padding: 4px 6px;
-      }
-      table .time {
-        background-color: white;
-        border: 0.5px solid black;
-        border-radius: 3px;
-        padding: 2px 3px;
-      }
-      table td > input {
-        width: 85px;
-        height: 22px;
-        border-radius: 3px;
-      }
-
       /* /Table section styles */
-
-      /* Table Actions */
-      .form-action {
-        display: flex;
-        justify-content: end;
-        align-items: center;
-        gap: 10px;
-        margin-top: 20px;
-      }
-
-      .form-action button {
-        width: 100px;
-        height: 30px;
-        font-size: 12px;
-        color: white;
-        background-color: #3376b8;
-        border: 0;
-        border-radius: 3px;
-      }
-
-      /* /Table Actions */
-
-      /* Table Overal */
-      .overal_td {
-        display: flex;
-        gap: 10px;
-      }
-      .overal_td input {
-        height: 20px;
-        width: 160px;
-        background-color: #c3c3c3;
-        border-radius: 3px;
-        border: 0.3px solid black;
-      }
-      .overal_td span {
-        color: #ff0000;
-        font-weight: bold;
-      }
-      .overal_td button {
-        width: 60px;
-        height: 26px;
-        border: 0;
-        background-color: #3376b8;
-        font-size: bold;
-        color: white;
-        border-radius: 3px;
-        font-family: inherit;
-      }
-      .overal_td p {
-        line-height: 0;
-        color: #ff0000;
-        font-weight: bold;
-      }
-      /* /Table Overal */
     </style>
   </head>
 
@@ -511,133 +448,115 @@
           </div>
           <!-- /Main Content Header -->
 
+          <h4 class="table-name">※ 총 시간</h4>
           <table>
             <thead>
               <tr>
-                <th>이름</th>
-                <th>근무타입</th>
-                <th>근무일자</th>
-                <th>시작 시간</th>
-                <th>종료 시간</th>
-                <th>근무내용</th>
-                <th>관련근거</th>
-                <th>일정 (분)</th>
-                <th>야간 (분)</th>
-                <th>취소</th>
+                <th>시간외 근무시간</th>
+                <th>10시간</th>
+                <th>야간 시간</th>
+                <th>0시간</th>
+                <th>휴일 근무 일수</th>
+                <th>0일</th>
+                <th>일반근무+ 한시적현업+ 휴일</th>
+                <th class="blue">10시간</th>
               </tr>
             </thead>
             <tbody>
               <tr>
-                <td>경위 경무담당</td>
-                <td>
-                  <select name="" id="">
-                    <option value="">추가근무</option>
-                    <option value="">Option 2</option>
-                    <option value="">Option 3</option>
-                    <option value="">Option 4</option>
-                  </select>
-                </td>
-                <td>
-                  <span class="date">2025-01-01</span>
-                </td>
-                <td>
-                  <span class="time">6:30</span>
-                </td>
-                <td>
-                  <span class="time">6:30</span>
-                </td>
-                <td>
-                  <input type="text" />
-                </td>
-                <td>
-                  <input type="text" />
-                </td>
-                <td>0</td>
-                <td>0</td>
-                <td></td>
-              </tr>
-              <tr>
-                <td>경위 경무담당</td>
-                <td>
-                  <select name="" id="">
-                    <option value="">추가근무</option>
-                    <option value="">Option 2</option>
-                    <option value="">Option 3</option>
-                    <option value="">Option 4</option>
-                  </select>
-                </td>
-                <td>
-                  <span class="date">2025-01-01</span>
-                </td>
-                <td>
-                  <span class="time">6:30</span>
-                </td>
-                <td>
-                  <span class="time">6:30</span>
-                </td>
-                <td>
-                  <input type="text" />
-                </td>
-                <td>
-                  <input type="text" />
-                </td>
-                <td>0</td>
-                <td>0</td>
-                <td></td>
-              </tr>
-              <tr>
-                <td>경위 경무담당</td>
-                <td>
-                  <select name="" id="">
-                    <option value="">추가근무</option>
-                    <option value="">Option 2</option>
-                    <option value="">Option 3</option>
-                    <option value="">Option 4</option>
-                  </select>
-                </td>
-                <td>
-                  <span class="date">2025-01-01</span>
-                </td>
-                <td>
-                  <span class="time">6:30</span>
-                </td>
-                <td>
-                  <span class="time">6:30</span>
-                </td>
-                <td>
-                  <input type="text" />
-                </td>
-                <td>
-                  <input type="text" />
-                </td>
-                <td>0</td>
-                <td>0</td>
-                <td></td>
-              </tr>
-              <tr>
-                <td>결재자</td>
-                <td>결재자</td>
-                <td colspan="8">
-                  <div class="overal_td">
-                    <input type="text" />
-                    <span>*</span>
-                    <button>선택</button>
-                    <p>
-                      근무내용과 관련근에 콤마(,)를 사용하시면 등록이 되지
-                      않습니다.
-                    </p>
-                  </div>
-                </td>
+
               </tr>
             </tbody>
           </table>
 
-          <!-- Table Actions -->
-          <div class="form-action">
-            <button>등록</button>
-            <button class="danger">뒤로</button>
-          </div>
-          <!-- /Table Actions -->
+          <h4 class="table-name red">※일반 근무</h4>
+          <table>
+            <thead>
+              <tr>
+                <th>초과 인정시간</th>
+                <th>10시간</th>
+                <th>초과 실적시간</th>
+                <th>0시간</th>
+                <th>기본시간</th>
+                <th>10시간</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td colspan="2">-</td>
+                <td>근무 기간</td>
+                <td>28일</td>
+                <td>평일 출근일수</td>
+                <td>20일</td>
+              </tr>
+            </tbody>
+          </table>
+
+          <h4 class="table-name blue">※현업 근무</h4>
+          <table>
+            <thead>
+              <tr>
+                <th>현업 초과시간</th>
+                <th>0시간</th>
+                <th>총 근무시간</th>
+                <th>0시간</th>
+                <th>법정근무시간</th>
+                <th>0시간</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td colspan="2">-</td>
+                <td>근무기간</td>
+                <td>0일</td>
+                <td>법정 근무일수</td>
+                <td>0일</td>
+              </tr>
+            </tbody>
+          </table>
+
+          <h4 class="table-name green">※일별 내역</h4>
+          <table>
+            <thead>
+              <tr rowspan="2">
+                <th rowspan="2">날짜</th>
+                <th colspan="2">일반</th>
+                <th colspan="6">현업</th>
+              </tr>
+              <tr>
+                <th colspan="2">근무 타입  근무 시간</th>
+                <th>인정 시간</th>
+                <th colspan="5">근무타입  근무시간  인정시간  야간시간  휴일수당</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td class="blue">2025-02-01(E)</td>
+                <td colspan="3">-</td>
+                <td colspan="5">-</td>
+              </tr>
+              <tr>
+                <td class="blue">2025-02-02(일)</td>
+                <td colspan="3">-</td>
+                <td colspan="5">-</td>
+              </tr>
+              <tr>
+                <td class="blue">2025-02-03()</td>
+                <td colspan="3">-</td>
+                <td colspan="5">-</td>
+              </tr>
+              <tr>
+                <td class="blue">2025-02-04(+)</td>
+                <td colspan="3">-</td>
+                <td colspan="5">-</td>
+              </tr>
+              <tr>
+                <td class="blue">2025-02-05(+)</td>
+                <td colspan="3">-</td>
+                <td colspan="5">-</td>
+              </tr>
+            </tbody>
+          </table>
         </div>
         <!-- Main Content -->
       </section>
