--- a/page_7.html
+++ b/page_7.html
@@ -298,18 +298,18 @@
       /* /Main Content Header */
 
       /* Table section styles */
-      .table-name{
+      .table-name {
         text-align: left;
         line-height: 0;
         margin-top: 45px;
       }
-      .blue{
+      .blue {
         color: #3376b8;
       }
-      .red{
+      .red {
         color: #ff0000;
       }
-      .green{
+      .green {
         color: #008f0a;
       }
       table {
@@ -406,7 +406,7 @@
         <div class="content__content">
           <!-- Main Content Header -->
           <h1>개인별 초과근무 내역서(일반)</h1>
-          <hr>
+          <hr />
           <div class="content_header_control">
             <div class="select_option">
               <div class="select_inputs">
@@ -463,9 +463,7 @@
               </tr>
             </thead>
             <tbody>
-              <tr>
-
-              </tr>
+              <tr></tr>
             </tbody>
           </table>
 
@@ -524,9 +522,11 @@
                 <th colspan="6">현업</th>
               </tr>
               <tr>
-                <th colspan="2">근무 타입  근무 시간</th>
+                <th colspan="2">근무 타입 근무 시간</th>
                 <th>인정 시간</th>
-                <th colspan="5">근무타입  근무시간  인정시간  야간시간  휴일수당</th>
+                <th colspan="5">
+                  근무타입 근무시간 인정시간 야간시간 휴일수당
+                </th>
               </tr>
             </thead>
             <tbody>
