--- a/page_new.html
+++ b/page_new.html
@@ -194,191 +194,31 @@
         text-align: center;
         color: #525252;
       }
+
+      .content__content hr {
+        border: none;
+        height: 1px;
+        background-color: #0054a6;
+      }
       /* /Main Content */
 
       /* Main Content Header */
-      .content_header_control {
+      .content__data{
         display: flex;
-        flex-direction: column;
-        gap: 10px;
+      }
+      .content__data > div{
+        width: 50%;
+        padding: 20px;
+        border: 1px solid #0054a6;
       }
 
-      .select_option {
+      .control_date{
         display: flex;
-        justify-content: center;
-        align-items: center;
-        gap: 0px;
+        gap: 20px;
+        justify-content: space-between;
       }
 
-      .check_button {
-        border-radius: 5px;
-        width: 60px;
-        height: 30px;
-        font-size: 12px;
-        padding-left: 5px;
-        padding-right: 5px;
-        background-color: #3376b8;
-        color: white;
-        border: none;
-        margin-left: 10px;
-      }
-
-      .excel_button {
-        background-color: #33b83c;
-      }
-
-      .select_inputs {
-        display: flex;
-        gap: 0;
-      }
-
-      .select_inputs select {
-        height: 30px;
-        width: 150px;
-        padding: 5px;
-        border: 0px;
-        background-color: #3376b8;
-        color: white;
-        margin: 0;
-      }
-
-      .select_inputs option {
-        width: 150px;
-        background-color: #eaeaea;
-        color: black;
-      }
-
-      .date_inputs input {
-        height: 30px;
-        width: 150px;
-        padding-left: 5px;
-        padding-right: 5px;
-        border: 0px;
-        background-color: #c4c4c4;
-        color: #000000;
-        margin: 0;
-        border-top-left-radius: 5px;
-        border-bottom-left-radius: 5px;
-        border-top-right-radius: 5px;
-        border-bottom-right-radius: 5px;
-      }
-
-      .select_first {
-        border-top-left-radius: 5px;
-        border-bottom-left-radius: 5px;
-      }
-
-      .select_last {
-        border-top-right-radius: 5px;
-        border-bottom-right-radius: 5px;
-      }
       /* /Main Content Header */
-
-      /* Table section styles */
-      table {
-        width: 100%;
-        border-collapse: collapse;
-        margin: 30px auto;
-        font-size: 13px;
-        font-weight: 600;
-      }
-
-      thead {
-        background-color: #3376b8;
-        color: white;
-      }
-
-      tbody tr:nth-child(odd) {
-        background-color: #eaeaea;
-      }
-
-      th,
-      td {
-        border: 1px solid #bdbdbd;
-        padding: 5px;
-        text-align: center;
-      }
-
-      table select {
-        border-radius: 3px;
-        padding: 4px 6px;
-      }
-      table .date {
-        background-color: white;
-        border: 0.5px solid black;
-        border-radius: 3px;
-        padding: 4px 6px;
-      }
-      table .time {
-        background-color: white;
-        border: 0.5px solid black;
-        border-radius: 3px;
-        padding: 2px 3px;
-      }
-      table td > input {
-        width: 85px;
-        height: 22px;
-        border-radius: 3px;
-      }
-
-      /* /Table section styles */
-
-      /* Table Actions */
-      .form-action {
-        display: flex;
-        justify-content: end;
-        align-items: center;
-        gap: 10px;
-        margin-top: 20px;
-      }
-
-      .form-action button {
-        width: 100px;
-        height: 30px;
-        font-size: 12px;
-        color: white;
-        background-color: #3376b8;
-        border: 0;
-        border-radius: 3px;
-      }
-
-      .form-action button.danger {
-        background-color: #ff0000;
-      }
-      /* /Table Actions */
-
-      /* Table Overal */
-      .overal_td {
-        display: flex;
-        gap: 10px;
-      }
-      .overal_td input {
-        height: 20px;
-        width: 160px;
-        background-color: #c3c3c3;
-        border-radius: 3px;
-        border: 0.3px solid black;
-      }
-      .overal_td span {
-        color: #ff0000;
-        font-weight: bold;
-      }
-      .overal_td button {
-        width: 60px;
-        height: 26px;
-        border: 0;
-        background-color: #3376b8;
-        font-size: bold;
-        color: white;
-        border-radius: 3px;
-        font-family: inherit;
-      }
-      .overal_td p {
-        line-height: 0;
-        color: #ff0000;
-        font-weight: bold;
-      }
-      /* /Table Overal */
     </style>
   </head>
 
@@ -455,171 +295,24 @@
         <div class="content__content">
           <!-- Main Content Header -->
           <h1>현업초과근무 등록</h1>
-          <div class="content_header_control">
-            <div class="select_option">
-              <div class="select_inputs">
-                <select name="" id="" class="select_first">
-                  <option value="">서울청</option>
-                  <option value="">Option 2</option>
-                  <option value="">Option 3</option>
-                  <option value="">Option 4</option>
-                </select>
-                <select name="" id="">
-                  <option value="">경무기획과</option>
-                  <option value="">Option 2</option>
-                  <option value="">Option 3</option>
-                  <option value="">Option 4</option>
-                </select>
-                <select name="" id="" class="select_last">
-                  <option value="">경무계</option>
-                  <option value="">Option 2</option>
-                  <option value="">Option 3</option>
-                  <option value="">Option 4</option>
-                </select>
-                <button class="check_button">조회</button>
-              </div>
-            </div>
-            <div class="select_option">
-              <div class="select_inputs">
-                <select name="" id="" class="select_first select_last">
-                  <option value="">경무담당(su777</option>
-                  <option value="">Option 2</option>
-                  <option value="">Option 3</option>
-                  <option value="">Option 4</option>
-                </select>
-              </div>
-              <button class="check_button excel_button">엑셀</button>
-            </div>
-          </div>
-          <!-- /Main Content Header -->
+          <hr>
 
-          <table>
-            <thead>
-              <tr>
-                <th>이름</th>
-                <th>근무타입</th>
-                <th>근무일자</th>
-                <th>시작 시간</th>
-                <th>종료 시간</th>
-                <th>근무내용</th>
-                <th>관련근거</th>
-                <th>일정 (분)</th>
-                <th>야간 (분)</th>
-                <th>취소</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>경위 경무담당</td>
-                <td>
-                  <select name="" id="">
-                    <option value="">추가근무</option>
-                    <option value="">Option 2</option>
-                    <option value="">Option 3</option>
-                    <option value="">Option 4</option>
-                  </select>
-                </td>
-                <td>
-                  <span class="date">2025-01-01</span>
-                </td>
-                <td>
-                  <span class="time">6:30</span>
-                </td>
-                <td>
-                  <span class="time">6:30</span>
-                </td>
-                <td>
-                  <input type="text" />
-                </td>
-                <td>
-                  <input type="text" />
-                </td>
-                <td>0</td>
-                <td>0</td>
-                <td></td>
-              </tr>
-              <tr>
-                <td>경위 경무담당</td>
-                <td>
-                  <select name="" id="">
-                    <option value="">추가근무</option>
-                    <option value="">Option 2</option>
-                    <option value="">Option 3</option>
-                    <option value="">Option 4</option>
-                  </select>
-                </td>
-                <td>
-                  <span class="date">2025-01-01</span>
-                </td>
-                <td>
-                  <span class="time">6:30</span>
-                </td>
-                <td>
-                  <span class="time">6:30</span>
-                </td>
-                <td>
-                  <input type="text" />
-                </td>
-                <td>
-                  <input type="text" />
-                </td>
-                <td>0</td>
-                <td>0</td>
-                <td></td>
-              </tr>
-              <tr>
-                <td>경위 경무담당</td>
-                <td>
-                  <select name="" id="">
-                    <option value="">추가근무</option>
-                    <option value="">Option 2</option>
-                    <option value="">Option 3</option>
-                    <option value="">Option 4</option>
-                  </select>
-                </td>
-                <td>
-                  <span class="date">2025-01-01</span>
-                </td>
-                <td>
-                  <span class="time">6:30</span>
-                </td>
-                <td>
-                  <span class="time">6:30</span>
-                </td>
-                <td>
-                  <input type="text" />
-                </td>
-                <td>
-                  <input type="text" />
-                </td>
-                <td>0</td>
-                <td>0</td>
-                <td></td>
-              </tr>
-              <tr>
-                <td>결재자</td>
-                <td>결재자</td>
-                <td colspan="8">
-                  <div class="overal_td">
-                    <input type="text" />
-                    <span>*</span>
-                    <button>선택</button>
-                    <p>
-                      근무내용과 관련근에 콤마(,)를 사용하시면 등록이 되지
-                      않습니다.
-                    </p>
-                  </div>
-                </td>
-              </tr>
-            </tbody>
-          </table>
+          <div class="content__data">
 
-          <!-- Table Actions -->
-          <div class="form-action">
-            <button>등록</button>
-            <button class="danger">뒤로</button>
+            <div>
+              <form action="" class="control_date">
+                <label for="">Date</label>
+                <input type="month" name="" id="">
+              </form>
+            </div>
+
+            <div>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam mollitia repudiandae beatae ducimus, voluptatem, ex consectetur quaerat corrupti voluptate iusto at? Aliquid laborum temporibus commodi ipsum magnam neque dignissimos molestias voluptates, inventore debitis, mollitia ducimus totam dolore suscipit omnis sint? Sunt, cum voluptate fugiat voluptas harum quisquam facere animi fuga eligendi suscipit iste nostrum earum quod? Itaque aliquam cumque dolorem excepturi et, unde maiores modi adipisci vel quia obcaecati facere? Accusantium accusamus dolorem sequi velit. Sed neque quos saepe soluta suscipit necessitatibus commodi aliquid ea. Esse, blanditiis! Quae porro impedit rem, repellat temporibus recusandae aspernatur quisquam? Molestias consequatur deleniti iusto consectetur eaque modi vero cum saepe praesentium harum odio ab cumque laborum voluptate, corrupti voluptatum dolorum perspiciatis quo magnam mollitia enim exercitationem commodi. Minus odio laudantium dolore vel neque molestias labore placeat asperiores adipisci inventore nostrum, consequuntur recusandae impedit, iure officiis ullam tenetur beatae. Perferendis provident quia sunt quibusdam, minus quo distinctio. Non harum quo esse ex modi aliquam assumenda deleniti veniam iste. Non dolorem in blanditiis vitae voluptates quisquam facere dolorum! Quo velit omnis saepe commodi itaque possimus excepturi, quidem quibusdam quam exercitationem placeat asperiores. Quam similique sit, accusantium tenetur fugit autem placeat iste! Quidem sint odit praesentium placeat enim alias doloribus, sapiente voluptates. Nulla excepturi labore quasi eos laborum at nostrum quis consequuntur assumenda tempore ex, minima quidem. Tempora eum veritatis doloribus hic cupiditate modi necessitatibus beatae ullam impedit deleniti vel maiores illum, ea natus iusto labore praesentium incidunt tenetur deserunt cumque magnam. Libero in perferendis tenetur qui, odit ab enim accusamus quos aliquid commodi architecto, quisquam minima quis eius sunt! Cupiditate, consequatur quod. Error perspiciatis id blanditiis ipsam similique cumque distinctio obcaecati sit laboriosam explicabo! Sunt et deleniti, quaerat molestias quod eum quas, consequuntur iste eos placeat ab nam omnis hic in ut recusandae? Alias, iusto explicabo?
+              </p>
+            </div>
+
           </div>
-          <!-- /Table Actions -->
         </div>
         <!-- Main Content -->
       </section>
